FIX: spacing and spelling issues

--- a/css/app.css
+++ b/css/app.css
@@ -432,7 +432,7 @@ main section:not(.hero, .designit-section) {
 /*  = FAQ */
 
 .faq {
-    padding: 100px 0;
+    margin: 80px 0;
 }
 
 .faq .section-title {
@@ -472,6 +472,7 @@ main section:not(.hero, .designit-section) {
     border: 1px solid white;
     display: block;
     margin-top: 100px;
+    opacity: 0.5;
 }
 
 .language-menu {
